solved search popup alignment issue

--- a/sites/all/themes/hk_theme/sass/components/_crm_core.scss
+++ b/sites/all/themes/hk_theme/sass/components/_crm_core.scss
@@ -74,6 +74,9 @@
   #edit-field-phone-und-0-value {
     width: 193px;
   }
+  .form-item {
+    margin-top: 0;
+  }
 }
 .form-item-contact-name-und-0 {
   margin: 1.5em 0 0;
