--- a/sites/all/themes/hk_theme/sass/components/_leaflet.scss
+++ b/sites/all/themes/hk_theme/sass/components/_leaflet.scss
@@ -621,7 +621,11 @@ div.hide-submit-processing {
   }
   .front {
     .ui-dialog {
-      width: 70% !important;
+      /*width: 73% !important;*/
+      margin-left: 43px;
+      width: -webkit-calc(100% - 100px) !important;
+      width: -moz-calc(100% - 100px) !important;
+      width: calc(100% - 100px) !important;
     }
   }
   .home-form-wrap {
